# llm-langchain

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
scripts/: healthcheck.py  seed_knowledge.py
src/app/: constants.py  main.py
src/app/agent/: graph.py  nodes.py  prompts.py  state.py
src/app/api/: health.py  router.py  webhook.py
src/app/core/: config.py  database.py  exceptions.py  http_client.py  logging.py
src/app/guardrails/: content_moderator.py  injection_detector.py  pii_detector.py  topic_filter.py
src/app/models/: db.py
src/app/rag/: embeddings.py  ingest.py  retriever.py
src/app/schemas/: booking.py  waha.py
src/app/services/: booking_api.py  chat.py  waha_client.py
src/app/tools/: booking_tool.py  catalog_tool.py  rag_tool.py
tests/: conftest.py  test_agent.py  test_booking.py  test_guardrails.py  test_rag.py  test_webhook.py
