[project]
name = "whatsapp-bot"
version = "0.1.0"
description = "WhatsApp AI Chatbot with LangChain + LangGraph"
authors = [{name = "g.shafadonia", email = "fafaghaws@live.com"}]
requires-python = ">=3.12,<3.13"
dependencies = [
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-postgres>=0.0.12",
    "langchain-text-splitters>=0.3",
    "langgraph>=0.2",
    "openai>=1.60",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pypdf>=5.0",
    "structlog>=24.4",
    "tenacity>=9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pyright>=1.1",
    "pre-commit>=4.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
include = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
